--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -1,28 +1,39 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.nav-bar {
-    box-shadow: 0px 5px 5px  rgb(134, 134, 134);
-    padding: 1em 2em;
+.landing {
+    background-image: url(../media/Landing-Background.png);
+    width: 100%;
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: fixed;
     display: flex;
-    align-items: center;
     justify-content: center;
-}
-
-
-.nav-icons {
-    display: flex;
-    flex-direction: row;
     align-items: center;
-
-    margin-right: 4.5em;
-    
 }
 
-.cart-icon {
-    margin-left: 1.5em;
+.center-container {
+    background-color: rgba(255, 255, 255, 0.85);
+    border-radius: 5px;
+    text-align: center;
+    padding: 8em 12em 8em 12em;
 }
 
+.center-container h2 {
+    font-size: 32px;
+    margin-bottom: 2em;
+}
+
+.center-container h4 {
+    font-size: 20px;
+    margin-bottom: 2em;
+}
+
+.center-container button {
+    padding: 1em 5em 1em 5em;
+    background-color: #CCA43B;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    font-weight: bold;
+    font-size: 16px;
+}
