--- a/css/nav-bar.css
+++ b/css/nav-bar.css
@@ -1,7 +1,6 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -11,6 +10,9 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    z-index: 1000;
+    background-color: white;
+    position: relative;
 }
 
 
